--- a/CMP400-artifact/imgui.ini
+++ b/CMP400-artifact/imgui.ini
@@ -9,12 +9,22 @@ Size=339,180
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=268,45
+Pos=875,51
 Size=550,681
 Collapsed=0
 
 [Window][Test]
-Pos=10,11
-Size=429,234
+Pos=16,16
+Size=689,383
+Collapsed=0
+
+[Window][Example: Console]
+Pos=228,67
+Size=528,675
+Collapsed=0
+
+[Window][Example: Log]
+Pos=127,228
+Size=714,400
 Collapsed=0
 
